2007-01-29  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.3.

2007-01-28  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	Fix install target (thanks Christian Persch, #401756)

2006-12-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Set the urgency hint on the extract completed dialog (#388577,
	Sebastien Bacher)

2006-12-31  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix a compile warning.

2006-12-20  Christian Persch  <chpe@cvs.gnome.org>

	* libjuicer/.cvsignore:
	* tests/Makefile.am:
	Add cvsignore, and use variables instead of configure
	substitutions in Makefile. Bug #387906.

2006-12-08  Adam Petaccia <adam@tpetaccia.com>

	* src/sj-extracting.h:
	* src/sj-play.h:
	* src/sj-prefs.h:
	Added in missing function prototypes

	* src/sj-about.c:
	* src/sj-main.c: 
	* src/sj-prefs.c:
	Actually include respective .h files

	Fixes #383879.

2006-12-07  Adam Petaccia <adam@tpetaccia.com>
	
	* src/sj-main.c:
	* src/sj-prefs.c:
	Mark some data as const (#383488)

2006-12-05  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	* data/sound-juicer.1:
	Add man file (thanks Sven Arvidsson)

2006-11-23  Luca Cavalli  <lcavalli@cvs.gnome.org>

	* src/sj-main.c: (media_removed_cb):
	Make sure we are not playing when media is removed (#378250).

2006-11-19  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.2.

2006-11-19  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Don't disable Reread when playing (#347218, Stephen Cook).

2006-10-13  Adam Petaccia <adam@tpetaccia.com>

	* src/sj-extracting.c:
	"none" shouldn't create a directory in Folder hierarchy preference
	(#374831).

2006-11-02  Ross Burton  <ross@burtonini.com>

	* src/bacon-volume.[ch]:
	Update for multi-screen and g-i-t (#369490).

2006-10-31  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add a11y relationships for the duration (#364386, Robin Sonefors)
