@@ -1,3 +1,12 @@
+2007-03-04  Ross Burton  <ross@burtonini.com>
+
+	* tests/Makefile.am:
+	Link to libjuicer.la instead of the sources directly.  This fixes
+	srcdir!=builddir builds, thanks Loic Minier. (#414159).
+
+	* libjuicer/Makefile.am:
+	marshal.c depends on marshal.h, and whitespace cleanup (Loic).
+
 2007-01-29  Ross Burton  <ross@burtonini.com>
 
 	* configure.ac:
